--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.15.1",
     "express": "^4.19.2"
+  },
+  "devDependencies": {
+    "prisma": "^5.15.1"
   }
 }
